--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,9 @@
 <h2>
-  <% if @user %>
-    Logged in: <%= @user.email %>
-  <% end %>
   <%= @content %>
 </h2>
+<% if @user %>
+  <p>
+    Logged in: <%= @user.email %>
+  </p>
+  <%= button_to 'logout', logout_path, method: :delete %>
+<% end %>
