--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -8,9 +8,12 @@
   <% end %>
 <% end %>
 
-<%= form_with model: @user, url: sign_up_path do |form| %>
+<%= form_with model: @user, url: sign_up_path, data: {turbo: false} do |form| %>
+  <%= form.label :email%>
   <%= form.text_field :email %>
+  <%= form.label :password %>
   <%= form.password_field :password %>
+  <%= form.label :password_confirmation%>
   <%= form.password_field :password_confirmation %>
   <%= form.submit 'Sign Up' %>
 <% end %>
