--- a/app/views/password_mailer/reset.text.erb
+++ b/app/views/password_mailer/reset.text.erb
@@ -4,4 +4,4 @@ Someone request your password
 
 If this was you, click to link for reset the password, this links expires in 15 minutes.
 
-<%= password_reset_edit_url(@token) %>
+<%= password_reset_edit_url(token: @token) %>
